Take configuration from env variables only

--- a/ui/views/systems/systems.templ
+++ b/ui/views/systems/systems.templ
@@ -1,7 +1,9 @@
 package systems
 
-import "github.com/datasektionen/pls4/models"
-import "github.com/datasektionen/pls4/ui/util"
+import (
+	"github.com/datasektionen/pls4/models"
+	"github.com/datasektionen/pls4/ui/util"
+)
 
 var textInput = "border border-gray-400 rounded outline-none focus:border-blue-400 focus:border-2 focus:-m-px px-1"
 
